fix align

--- a/css/style.css
+++ b/css/style.css
@@ -8972,3 +8972,8 @@ textarea.form-control {
   100% {
     stroke-dasharray: 89, 200;
     stroke-dashoffset: -136px; } }
+
+footer .container .align {
+  display: flex;
+  justify-content: center;
+}
